:hammer: fix error in landing page and fix overflow-x scroll behaviour to overlay in guardian checkout screen remove old api in guardian checkout screen and make changes as needed

--- a/src/screens/GuardianCheckoutScreen/GuardianCheckoutScreen.scss
+++ b/src/screens/GuardianCheckoutScreen/GuardianCheckoutScreen.scss
@@ -26,7 +26,7 @@
         }
       }
       .select-child {
-        overflow-x: scroll;
+        overflow-x: overlay;
         display: flex;
         justify-content: flex-start;
         margin-top: 0.5rem;
